criando rota delete
