# src/routes/v1/financialRoutes.js
@@ -6,10 +6,6 @@ const financialControllers = require('../../controllers/financialControllers');
 const upload = multer();
 
 financialRoutes.get(
-  '/expenses/:userId',
-  financialControllers.getExpensesByUserId
-);
-financialRoutes.get(
   '/filter-expenses/:userId',
   financialControllers.getExpensesFilteredByUserIdAndQuery
 );
@@ -17,6 +13,16 @@ financialRoutes.post(
   '/expenses/:userId',
   upload.single('file'),
   financialControllers.importExpensesData
+);
+
+financialRoutes.get(
+  '/expenses-by-user/:userId',
+  financialControllers.getExpensesByUserId
+);
+
+financialRoutes.delete(
+  '/expenses/:userId/:expenseId',
+  financialControllers.delete
 );
 
 module.exports = financialRoutes;
